force-app/main/default/objects/Book__c/fields/Book_name__c.field-meta.xml
<CustomField>
    <fullName>Book_name__c</fullName>
    <label>Book name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>