force-app/main/default/objects/Book__c/fields/Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Book_Number__c</fullName>
    <label>Book Number</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>