force-app/main/default/objects/Book__c/fields/book_price__c.field-meta.xml
<CustomField>
    <fullName>book_price__c</fullName>
    <label>book price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>