force-app/main/default/objects/Book__c/fields/book_self__c.field-meta.xml
<CustomField>
    <fullName>book_self__c</fullName>
    <label>book self</label>
    <referenceTo>book_self__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>