force-app/main/default/objects/Book__c/fields/check_box_field_test__c.field-meta.xml
<CustomField>
    <fullName>check_box_field_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check box field test</label>
    <type>Checkbox</type>
</CustomField>