force-app/main/default/objects/Book__c/fields/date_and_time_test__c.field-meta.xml
<CustomField>
    <fullName>date_and_time_test__c</fullName>
    <label>date and time test</label>
    <type>DateTime</type>
</CustomField>