force-app/main/default/objects/Book__c/fields/date_field_test__c.field-meta.xml
<CustomField>
    <fullName>date_field_test__c</fullName>
    <label>date field test</label>
    <type>Date</type>
</CustomField>