force-app/main/default/objects/Book__c/fields/discount1__c.field-meta.xml
<CustomField>
    <fullName>discount1__c</fullName>
    <label>discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>