force-app/main/default/objects/Book__c/fields/email_test__c.field-meta.xml
<CustomField>
    <fullName>email_test__c</fullName>
    <label>email test</label>
    <type>Email</type>
</CustomField>