force-app/main/default/objects/Book__c/fields/final_price__c.field-meta.xml
<CustomField>
    <fullName>final_price__c</fullName>
    <formula>book_price__c - ( book_price__c  *  discount1__c )+( book_price__c  *  GST__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>final price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>