force-app/main/default/objects/Book__c/fields/number_field_test__c.field-meta.xml
<CustomField>
    <fullName>number_field_test__c</fullName>
    <label>number field test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>