force-app/main/default/objects/Book__c/fields/phone_number_test__c.field-meta.xml
<CustomField>
    <fullName>phone_number_test__c</fullName>
    <label>phone number test</label>
    <type>Phone</type>
</CustomField>