force-app/main/default/objects/Book__c/fields/Picklist2__c.field-meta.xml
<CustomField>
    <fullName>Picklist2__c</fullName>
    <label>Picklist2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Maths1</fullName>
            </value>
            <value>
                <fullName>Maths2</fullName>
            </value>
            <value>
                <fullName>Arts1</fullName>
            </value>
            <value>
                <fullName>Arts2</fullName>
            </value>
            <value>
                <fullName>Science1</fullName>
            </value>
            <value>
                <fullName>Science2</fullName>
            </value>
            <value>
                <fullName>Account1</fullName>
            </value>
            <value>
                <fullName>Account2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>