force-app/main/default/objects/Book__c/fields/time_field_test__c.field-meta.xml
<CustomField>
    <fullName>time_field_test__c</fullName>
    <label>time field test</label>
    <type>Time</type>
</CustomField>