force-app/main/default/objects/Book__c/fields/url_field_test__c.field-meta.xml
<CustomField>
    <fullName>url_field_test__c</fullName>
    <label>url field test</label>
    <type>Url</type>
</CustomField>