force-app/main/default/objects/Book__c/validationRules/price_validation_check.validationRule-meta.xml
<ValidationRule>
    <fullName>price_validation_check</fullName>
    <active>true</active>
    <errorConditionFormula>book_price__c  &lt; 1000</errorConditionFormula>
    <errorDisplayField>book_price__c</errorDisplayField>
    <errorMessage>Price should be greater than 1000.</errorMessage>
</ValidationRule>